--- a/lab1/test/test.fsproj
+++ b/lab1/test/test.fsproj
@@ -17,7 +17,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.9.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0-pre.20" />
-    <ProjectReference Include="..\FirstIonideProject\FirstIonideProject.fsproj" />
+    <ProjectReference Include="..\src\src.fsproj" />
   </ItemGroup>
 
 </Project>
