--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+
+
 on:
   push:
     branches:
@@ -10,42 +12,34 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        folder: [lab1, lab2]
+        folder: [lab2]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v4.0.1
         with:
           dotnet-version: '8.0.x'
-      
       - name: Restore dependencies
-        run: dotnet restore ${{ matrix.folder }}/src/src.fsproj
-      
+        run: dotnet restore lab2/src/src.fsproj
       - name: Build project
-        run: dotnet build ${{ matrix.folder }}/src
-
+        run: dotnet build ./lab2/src
       - name: Set DOTNET_ROLL_FORWARD
         run: echo "DOTNET_ROLL_FORWARD=latestMajor" >> $GITHUB_ENV
-      
       - name: Lint
         run: |
           dotnet tool install -g dotnet-fsharplint
           echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
-          dotnet fsharplint lint ./${{ matrix.folder }}/src/*.fs
-
+          dotnet fsharplint lint ./src
       - name: Formatter
         run: |
           dotnet tool install -g fantomas-tool
           echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
-          fantomas ./${{ matrix.folder }}/src/*.fs 
-
+          fantomas ./lab2/src/*.fs 
       - name: Run project
-        run: dotnet run --project ./${{ matrix.folder }}/src
-
+        run: dotnet run --project ./lab2/src
       - name: Tests
         run: |
-          dotnet restore ${{ matrix.folder }}/test/test.fsproj
-          dotnet build ./${{ matrix.folder }}/test
-          dotnet test ./${{ matrix.folder }}/test --logger "console;verbosity=detailed"
+            dotnet restore lab2/test/test.fsproj
+            dotnet build ./lab2/test
+            dotnet test ./lab2/test --logger "console;verbosity=detailed"
